# minecraft-server-utilities

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: Dockerfile  mcsu@.service
docs/: configuration.md  deployment.md
examples/: mcsu.example.toml
src/mcsu/: __init__.py  __main__.py  _toml_template.py  backup.py  cli.py  config.py  errors.py  events.py  installer.py  logparser.py  notifications.py  players.py  properties.py  rcon.py  scheduler.py  server.py  state.py  supervisor.py  utils.py
tests/: conftest.py  test_backup.py  test_cli.py  test_config.py  test_installer.py  test_logparser.py  test_players.py  test_properties.py  test_rcon.py  test_scheduler_events.py  test_server.py  test_supervisor.py  test_utils.py
